--- a/html-source/about.html
+++ b/html-source/about.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en-us">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit">
@@ -11,10 +11,6 @@
 				background-color: #163b65;
 				margin-top:  1.5em;
 				color:  #FFFFFF;
-			}
-
-			.room-image {
-				max-width: 50%;
 			}
 
 			p{
