--- a/html-source/make-reservation.html
+++ b/html-source/make-reservation.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en-us">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit">
@@ -13,9 +13,6 @@
             color:  #FFFFFF;
         }
 
-        .room-image {
-            max-width: 50%;
-        }
 
         p{
 
