Adding HTML source files

--- a/html-source/contact.html
+++ b/html-source/contact.html
@@ -48,7 +48,7 @@
         <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true">Contact</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="make-reservation.html" tabindex="-1" aria-disabled="true">Book now</a>
+        <a class="nav-link" href="reservation.html" tabindex="-1" aria-disabled="true">Book now</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
