--- a/html-source/reservation.html
+++ b/html-source/reservation.html
@@ -8,18 +8,19 @@
 
     <title>My Nice Page</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-          integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/css/datepicker-bs4.min.css">
+    <link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
 
     <style>
-        .my-footer {
+        .my_footer {
             height: 5em;
             background-color: #163b65;
-            margin-top: 1.5em;
-            padding: 1em;
-            color: white;
-            font-size: 80%;
+            margin-top:  1.5em;
+            color:  #ffffff;
         }
+
+
     </style>
 </head>
 
@@ -63,26 +64,25 @@
 
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
             <h1 class="mt-3">Search for Availability</h1>
 
             <form action="reservation.html" method="post" novalidate class="needs-validation">
-                <input type="hidden" name="csrf_token" value="{{.CSRFToken}}">
-                <div class="row">
+                <div class="form-row">
                     <div class="col">
-                        <div class="row" id="reservation-dates">
-                            <div class="col-md-6">
-                                <label for="start_date">Starting Date</label>
-                                <input required class="form-control" type="date" name="start_date" id="start_date">
-                                <small id="startDateHelp" class="form-text text-muted">Enter your starting date in YYYY-MM-DD format</small>
-                            </div>
-                            <div class="col-md-6">
-                                <label for="end_date">Ending Date</label>
-                                <input required class="form-control" type="date" name="end_date" id="end_date">
-                                <small id="endDateHelp" class="form-text text-muted">Enter your ending date in YYYY-MM-DD format</small>
-                            </div>
-                        </div>
-                    </div>
+                    <div class = "form-row" id="foo">
+                        <div class="col">
+                            <label>
+                                <input type="text" name="start" placeholder="Arrival">
+                            </label>
+
+                            <label>
+                                <input type="text" name="end" placeholder="Departure">
+                            </label>
+                        </div> 
+                      </div>  
+                      </div>                      
                 </div>
 
                 <hr>
@@ -91,35 +91,83 @@
 
             </form>
 
+
+
+
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <p id="myParagraph">This is some text.</p>
+            <p>
+                <button id="colorButton" class="btn btn-outline-secondary">
+                    Click me
+                </button>
+            </p>
+        </div>
+
+    </div>
+    <div class="row my_footer">
+        <div class="col">
+            Left
+        </div>
+        <div class="col">
+            Middle
+        </div>
+        <div class="col">
+            Right
         </div>
     </div>
 
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.2.0/dist/js/datepicker-full.min.js"></script>
+<script src="https://unpkg.com/notie"></script>
 
-<footer class="my-footer">
-    <div class="row">
-        <div class="col">
-            left
-        </div>
+<script>
 
-        <div class="col">
-            center
-        </div>
+    
+//let myEl = document.getElementById("myParagraph");
 
-        <div class="col">
-            right
-        </div>
-    </div>
-</footer>
+//myEl.classList.add("redText");
+(function() {
+  'use strict';
+  window.addEventListener('load', function() {
+    // Fetch all the forms we want to apply custom Bootstrap validation styles to
+    let forms = document.getElementsByClassName('needs-validation');
+    // Loop over them and prevent submission
+    Array.prototype.filter.call(forms, function(form) {
+      form.addEventListener('submit', function(event) {
+        if (form.checkValidity() === false) {
+          event.preventDefault();
+          event.stopPropagation();
+        }
+        form.classList.add('was-validated');
+      }, false);
+    });
+  }, false);
+})();
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
-        crossorigin="anonymous"></script>
+document.getElementById("colorButton").addEventListener("click", function(){
+    notify("This is my message", "success")
+})
 
+const elem = document.getElementById('foo');
+const rangepicker = new DateRangePicker(elem, {
+  format:"yyyy-mm-dd"
+});
+
+function notify(msg, msgType) {
+    notie.alert({
+        type: msgType, // optional, default = 4, enum: [1, 2, 3, 4, 5, 'success', 'warning', 'error', 'info', 'neutral']
+        text: msg,
+    })
+}
+</script>
 
 </body>
 
